--- a/projects/settings/src/organize/departments/form/form.component.html
+++ b/projects/settings/src/organize/departments/form/form.component.html
@@ -14,7 +14,7 @@
   </nz-form-item>
 
   <nz-form-item>
-    <nz-form-label>父级</nz-form-label>
+    <nz-form-label>上级部门</nz-form-label>
     <nz-form-control nzHasFeedback>
       <nz-tree-select
         *ngIf="parentNodes"
