--- a/projects/settings/src/organize/users/users.component.html
+++ b/projects/settings/src/organize/users/users.component.html
@@ -1,6 +1,6 @@
 <nz-layout class="nested">
   <nz-sider nzTheme="light" [nzWidth]="300">
-    <wpx-settings-departments [(id)]="department" (idChange)="departmentChanged()"></wpx-settings-departments>
+    <wpx-settings-departments [(id)]="departmentId" (idChange)="selectedDepartment()"></wpx-settings-departments>
   </nz-sider>
   <nz-layout style="overflow: auto">
     <nz-content>
@@ -14,6 +14,7 @@
         </button>
         <nz-dropdown-menu #menu="nzDropdownMenu">
           <ul nz-menu>
+            <li nz-menu-item (click)="department(data)">设置部门</li>
             <li nz-menu-item (click)="form(data)">编辑</li>
             <li nz-menu-item nzDanger (click)="delete(data)">删除</li>
           </ul>
@@ -21,7 +22,7 @@
       </ng-template>
 
       <ng-template #bulk>
-        <a nz-button nzType="link" nzSize="small" (click)="table.data.clearChecked()">取消选择</a>
+        <a nz-button nzType="link" nzSize="small" (click)="data.clearChecked()">取消选择</a>
         <br />
         <a style="float: right" nz-button nzType="link" nzSize="small" nzDanger (click)="bulkDelete()">删除</a>
       </ng-template>
@@ -30,7 +31,8 @@
         <wpx-table
           #table
           wpxKey="users"
-          [wpxApi]="users"
+          [wpxApi]="users!"
+          [wpxData]="data"
           [wpxFields]="fields"
           [wpxActions]="actions"
           [wpxBulk]="bulk"
