--- a/projects/resources/src/factory/pages/tab-indexes/indexes.component.html
+++ b/projects/resources/src/factory/pages/tab-indexes/indexes.component.html
@@ -1,4 +1,4 @@
-<wpx-resources-factory-pages-tabs [key]="key" [extra]="extra">
+<wpx-resources-factory-pages-tabs [extra]="extra">
   <ng-template #extra>
     <button nz-button (click)="form()"> 创建索引 </button>
   </ng-template>
