--- a/projects/resources/src/factory/pages/tab-validator/validator.component.html
+++ b/projects/resources/src/factory/pages/tab-validator/validator.component.html
@@ -1,4 +1,4 @@
-<wpx-resources-factory-pages-tabs [key]="key" [extra]="extra">
+<wpx-resources-factory-pages-tabs [extra]="extra">
   <ng-template #extra>
     <button form="form" nz-button nzType="primary" [disabled]="!form?.valid">更新验证</button>
   </ng-template>
