--- a/projects/resources/src/factory/pages/tabs/tabs.component.html
+++ b/projects/resources/src/factory/pages/tabs/tabs.component.html
@@ -2,16 +2,13 @@
   <nz-card-tab>
     <nz-tabset nzLinkRouter [nzAnimated]="false" [nzTabBarExtraContent]="extra">
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/resources', 'factory', 'pages', key, 'schema']"> 内容模型 </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/resources', 'factory', 'pages', pages.key, 'schema']"> 内容模型 </a>
       </nz-tab>
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/resources', 'factory', 'pages', key, 'indexes']"> 索引规则 </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/resources', 'factory', 'pages', pages.key, 'indexes']"> 索引规则 </a>
       </nz-tab>
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/resources', 'factory', 'pages', key, 'rules']"> 显隐规则 </a>
-      </nz-tab>
-      <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/resources', 'factory', 'pages', key, 'validator']"> 验证器 </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/resources', 'factory', 'pages', pages.key, 'validator']"> 验证器 </a>
       </nz-tab>
     </nz-tabset>
   </nz-card-tab>
