--- a/projects/resources/src/factory/pages/tab-schema/schema.component.html
+++ b/projects/resources/src/factory/pages/tab-schema/schema.component.html
@@ -1,18 +1,12 @@
 <wpx-resources-factory-pages-tabs [extra]="extra">
   <ng-template #extra>
-    <button nz-button (click)="form()"> 创建字段 </button>
-  </ng-template>
-  <ng-template #footer>
-    <button nzBlock nz-button nzType="link" (click)="form()">
-      <i nz-icon nzType="plus"></i> 创建字段到该内容类型
-    </button>
+    <button nz-button nzType="primary" (click)="form()"> 新增 </button>
   </ng-template>
   <nz-table
     #contentTable
     [nzData]="fieldList"
     [nzFrontPagination]="false"
     [nzShowPagination]="false"
-    [nzFooter]="footer"
     [nzScroll]="{ x: '1200px' }"
   >
     <thead>
