--- a/projects/settings/src/security/session/session.component.html
+++ b/projects/settings/src/security/session/session.component.html
@@ -1,5 +1,52 @@
-<nz-card>
-  <nz-list nzSize="large" nzItemLayout="horizontal">
-    <nz-list-empty></nz-list-empty>
-  </nz-list>
+<ng-template #searchRef>
+  <nz-input-group style="width: 180px" nzSuffixIcon="search">
+    <input [(ngModel)]="searchText" (ngModelChange)="getData(500)" type="text" nz-input placeholder="用户名搜索" />
+  </nz-input-group>
+</ng-template>
+
+<nz-card [nzTitle]="searchRef">
+  <nz-table #basicTable [nzData]="data" [nzHideOnSinglePage]="true">
+    <thead>
+      <tr>
+        <th nzWidth="50px" nzLeft></th>
+        <th nzWidth="240px"><b>UID</b></th>
+        <th nzWidth="240px"><b>用户名</b></th>
+        <th nzWidth="240px"><b>权限组</b></th>
+        <th><b>详情</b></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of basicTable.data">
+        <td nzAlign="center">
+          <button
+            nz-button
+            nzType="text"
+            nz-tooltip="强制下线"
+            nz-popconfirm="确认下线该会话吗？"
+            (nzOnConfirm)="delete(item._id)"
+          >
+            <i nz-icon nzType="disconnect"></i>
+          </button>
+        </td>
+        <td>{{ item._id }}</td>
+        <td>{{ item.username }}</td>
+        <td>
+          <ng-container *ngFor="let x of item.roles">
+            <nz-tag *ngIf="!!roleDict[x]" nzColor="blue">
+              {{ roleDict[x].name }}
+            </nz-tag>
+          </ng-container>
+        </td>
+        <td>
+          <nz-space [nzSplit]="split">
+            <ng-template #split>
+              <nz-divider nzType="vertical"></nz-divider>
+            </ng-template>
+            <span *nzSpaceItem>称呼： {{ !!item.name ? item.name : '-' }}</span>
+            <span *nzSpaceItem>电子邮件： {{ !!item.email ? item.email : '-' }}</span>
+          </nz-space>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
 </nz-card>
