--- a/projects/settings/src/security/policy/policy.component.html
+++ b/projects/settings/src/security/policy/policy.component.html
@@ -3,46 +3,58 @@
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>会话超时策略</b></nz-list-item-meta-title>
-        <nz-list-item-meta-description>用户在 1 小时内没有操作，退出当前帐号。</nz-list-item-meta-description>
+        <nz-list-item-meta-description>
+          用户在 {{ data['user_session_expire'] | TimeParse }}内没有操作，退出当前帐号。
+        </nz-list-item-meta-description>
       </nz-list-item-meta>
       <ul nz-list-item-actions>
         <nz-list-item-action>
-          <button nz-button nzType="link">修改</button>
+          <button nz-button nzType="link" (click)="setSessionExpire()">设置</button>
         </nz-list-item-action>
       </ul>
     </nz-list-item>
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>帐号锁定策略</b></nz-list-item-meta-title>
-        <nz-list-item-meta-description>在 15 分钟内， 登录失败 5 次， 锁定帐号 15 分钟。</nz-list-item-meta-description>
+        <nz-list-item-meta-description>
+          在 {{ data['user_lock_time'] | TimeParse }}内， 登录失败 {{ data['user_login_failed_times'] }} 次， 锁定帐号
+          {{ data['user_lock_time'] | TimeParse }}。
+        </nz-list-item-meta-description>
       </nz-list-item-meta>
       <ul nz-list-item-actions>
         <nz-list-item-action>
-          <button nz-button nzType="link">修改</button>
+          <button nz-button nzType="link" (click)="setUserLock()">设置</button>
         </nz-list-item-action>
       </ul>
     </nz-list-item>
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>IP 锁定策略</b></nz-list-item-meta-title>
-        <nz-list-item-meta-description>非白名单 IP 连续 10 次登录失败后，锁定 IP</nz-list-item-meta-description>
+        <nz-list-item-meta-description>
+          非白名单 IP 连续 {{ data['ip_login_failed_times'] }} 次登录失败后，锁定 IP。
+        </nz-list-item-meta-description>
       </nz-list-item-meta>
       <ul nz-list-item-actions>
         <nz-list-item-action>
-          <button nz-button nzType="link">修改</button>
+          <button nz-button nzType="link" (click)="setIpLock()">设置</button>
         </nz-list-item-action>
       </ul>
     </nz-list-item>
     <nz-list-item>
       <nz-list-item-meta>
-        <nz-list-item-meta-title><b>密码设置策略</b></nz-list-item-meta-title>
+        <nz-list-item-meta-title><b>密码强度策略</b></nz-list-item-meta-title>
         <nz-list-item-meta-description>
-          至少包含以下字符中的 2 种：大写字母、小写字母、数字和特殊字符。
+          <ng-container [ngSwitch]="data['password_strength']">
+            <ng-container *ngSwitchCase="0"> 无限制。 </ng-container>
+            <ng-container *ngSwitchCase="1"> 需要大写字母和小写字母。 </ng-container>
+            <ng-container *ngSwitchCase="2"> 需要大写字母、小写字母和数字。 </ng-container>
+            <ng-container *ngSwitchCase="3"> 需要大写字母、小写字母、数字和特殊字符。 </ng-container>
+          </ng-container>
         </nz-list-item-meta-description>
       </nz-list-item-meta>
       <ul nz-list-item-actions>
         <nz-list-item-action>
-          <button nz-button nzType="link">修改</button>
+          <button nz-button nzType="link" (click)="setPasswordStrength()">设置</button>
         </nz-list-item-action>
       </ul>
     </nz-list-item>
@@ -50,12 +62,15 @@
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>密码有效期策略</b></nz-list-item-meta-title>
         <nz-list-item-meta-description>
-          密码过期后，系统强制要求修改密码。（距离密码到期15天时开始提示用户修改密码。）
+          <ng-container *ngIf="data['password_expire'] === 0; else passwordExpire"> 永久有效 </ng-container>
+          <ng-template #passwordExpire>
+            {{ data['password_expire'] }} 天后密码过期，系统强制要求修改密码。
+          </ng-template>
         </nz-list-item-meta-description>
       </nz-list-item-meta>
       <ul nz-list-item-actions>
         <nz-list-item-action>
-          <button nz-button nzType="link">修改</button>
+          <button nz-button nzType="link" (click)="setPasswordExpire()">设置</button>
         </nz-list-item-action>
       </ul>
     </nz-list-item>
