--- a/projects/settings/src/settings.component.html
+++ b/projects/settings/src/settings.component.html
@@ -26,10 +26,7 @@
         <li nz-menu-group nzTitle="安全性">
           <ul>
             <li nz-menu-item nzMatchRouter [routerLink]="['security', 'policy']">
-              <i nz-icon nzType="security-scan"></i> <span>策略</span>
-            </li>
-            <li nz-menu-item nzMatchRouter [routerLink]="['security', 'whitelist']">
-              <i nz-icon nzType="safety-certificate"></i> <span>白名单</span>
+              <i nz-icon nzType="safety-certificate"></i> <span>策略</span>
             </li>
             <li nz-menu-item nzMatchRouter [routerLink]="['security', 'session']">
               <i nz-icon nzType="rocket"></i> <span>会话</span>
