--- a/projects/settings/src/application/office/office.component.html
+++ b/projects/settings/src/application/office/office.component.html
@@ -1,5 +1,12 @@
-<nz-card>
-  <nz-list nzSize="large">
+<ng-template #actions>
+  <button nz-button nzType="primary">
+    管理后台
+    <i nz-icon nzType="select"></i>
+  </button>
+</ng-template>
+
+<nz-card nzTitle="团队协作功能需关联以下办公平台支持，切换平台要先解除关联" [nzExtra]="actions">
+  <nz-list nzSize="large" nzItemLayout="vertical">
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-avatar>
@@ -24,7 +31,7 @@
       </nz-list-item-meta>
       <ul nz-list-item-actions>
         <nz-list-item-action>
-          <button nz-button nzType="link">关联</button>
+          <button nz-button nzType="link" disabled>计划中</button>
         </nz-list-item-action>
       </ul>
     </nz-list-item>
@@ -38,7 +45,7 @@
       </nz-list-item-meta>
       <ul nz-list-item-actions>
         <nz-list-item-action>
-          <button nz-button nzType="link">关联</button>
+          <button nz-button nzType="link" disabled>计划中</button>
         </nz-list-item-action>
       </ul>
     </nz-list-item>
