--- a/projects/settings/src/security/audit/audit.component.html
+++ b/projects/settings/src/security/audit/audit.component.html
@@ -17,16 +17,36 @@
       <tr>
         <th nzWidth="200px" nzLeft>时间</th>
         <th nzWidth="240px"><b>UID</b></th>
-        <th nzWidth="240px"><b>用户名</b></th>
+        <th nzWidth="240px"><b>用户名 / 电子邮件</b></th>
         <th><b>详情</b></th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let item of basicTable.data">
-        <td nzAlign="center"> </td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>{{ item.time | date: 'yyyy-MM-dd hh:mm:ss' }} </td>
+        <td>{{ item.user }}</td>
+        <td>
+          <nz-space [nzSplit]="split">
+            <ng-template #split>
+              <nz-divider nzType="vertical"></nz-divider>
+            </ng-template>
+            <span *nzSpaceItem>{{ item.username }}</span>
+            <span *nzSpaceItem>{{ !!item.email ? item.email : '-' }}</span>
+          </nz-space>
+        </td>
+        <td>
+          <nz-space [nzSplit]="split">
+            <ng-template #split>
+              <nz-divider nzType="vertical"></nz-divider>
+            </ng-template>
+            <span *nzSpaceItem>TokenID： {{ item.token_id }}</span>
+            <span *nzSpaceItem>IP： {{ item.ip }}</span>
+            <span *nzSpaceItem>{{ !!item.detail.country ? item.detail.country : '-' }}</span>
+            <span *nzSpaceItem>{{ !!item.detail.province ? item.detail.province : '-' }}</span>
+            <span *nzSpaceItem>{{ !!item.detail.city ? item.detail.city : '-' }}</span>
+            <span *nzSpaceItem>{{ !!item.detail.isp ? item.detail.isp : '-' }}</span>
+          </nz-space>
+        </td>
       </tr>
     </tbody>
   </nz-table>
