简化：移除资源模块，子项合并至设置模块

--- a/projects/settings/src/application/pages/tab-indexes/indexes.component.html
+++ b/projects/settings/src/application/pages/tab-indexes/indexes.component.html
@@ -1,4 +1,4 @@
-<wpx-resources-factory-pages-tabs [extra]="extra">
+<wpx-settings-pages-tabs [extra]="extra">
   <ng-template #extra>
     <button nz-button nzType="primary" (click)="form()"> 新增 </button>
   </ng-template>
@@ -70,4 +70,4 @@
       </tr>
     </tbody>
   </nz-table>
-</wpx-resources-factory-pages-tabs>
+</wpx-settings-pages-tabs>
