--- a/projects/settings/src/application/pages/tab-schema/schema.component.html
+++ b/projects/settings/src/application/pages/tab-schema/schema.component.html
@@ -1,4 +1,4 @@
-<wpx-resources-factory-pages-tabs [extra]="extra">
+<wpx-settings-pages-tabs [extra]="extra">
   <ng-template #extra>
     <button nz-button nzType="primary" (click)="form()"> 新增 </button>
   </ng-template>
@@ -58,4 +58,4 @@
       </tr>
     </tbody>
   </nz-table>
-</wpx-resources-factory-pages-tabs>
+</wpx-settings-pages-tabs>
