--- a/projects/settings/src/security/audit/audit.component.html
+++ b/projects/settings/src/security/audit/audit.component.html
@@ -1,53 +1,72 @@
 <ng-template #searchRef>
-  <nz-input-group style="width: 180px" nzSuffixIcon="search">
-    <input [(ngModel)]="searchText" (ngModelChange)="getData()" type="text" nz-input placeholder="用户名搜索" />
-  </nz-input-group>
+  <nz-space>
+    <nz-range-picker
+      *nzSpaceItem
+      [nzShowTime]="{ nzFormat: 'HH:mm' }"
+      nzFormat="yyyy-MM-dd HH:mm"
+      ngModel
+    ></nz-range-picker>
+    <!--    <nz-input-group *nzSpaceItem style="width: 180px" nzSuffixIcon="search">-->
+    <!--      <input [(ngModel)]="searchText" (ngModelChange)="getData()" type="text" nz-input placeholder="用户名搜索" />-->
+    <!--    </nz-input-group>-->
+  </nz-space>
 </ng-template>
 
 <ng-template #actions>
   <button nz-button nzType="primary">
-    Grafana 监控日志
+    Grafana 监控
     <i nz-icon nzType="select"></i>
   </button>
 </ng-template>
 
-<nz-card [nzTitle]="searchRef" [nzExtra]="actions">
+<nz-card>
+  <nz-card-tab>
+    <nz-tabset nzSize="large" [nzTabBarExtraContent]="actions">
+      <nz-tab nzTitle="登录日志"></nz-tab>
+      <nz-tab nzTitle="操作日志"></nz-tab>
+      <nz-tab nzTitle="请求日志"></nz-tab>
+    </nz-tabset>
+  </nz-card-tab>
   <nz-table #basicTable [nzData]="data" [nzHideOnSinglePage]="true">
     <thead>
       <tr>
-        <th nzWidth="200px" nzLeft>时间</th>
-        <th nzWidth="240px"><b>UID</b></th>
-        <th nzWidth="240px"><b>用户名 / 电子邮件</b></th>
+        <th nzWidth="50px" nzLeft></th>
+        <th nzWidth="200px"><b>时间</b></th>
+        <th nzWidth="240px"><b>用户名</b></th>
+        <th nzWidth="240px"><b>电子邮件</b></th>
         <th><b>详情</b></th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of basicTable.data">
-        <td>{{ item.time | date: 'yyyy-MM-dd hh:mm:ss' }} </td>
-        <td>{{ item.user }}</td>
-        <td>
+      <ng-container *ngFor="let item of basicTable.data">
+        <tr>
+          <td [nzExpand]="expands.has(item._id)" (nzExpandChange)="onExpandChange(item._id, $event)"></td>
+          <td>{{ item.time | date: 'yyyy-MM-dd hh:mm:ss' }} </td>
+          <td>{{ item.username }}</td>
+          <td>{{ !!item.email ? item.email : '-' }}</td>
+          <td>
+            <nz-space [nzSplit]="split">
+              <ng-template #split>
+                <nz-divider nzType="vertical"></nz-divider>
+              </ng-template>
+              <span *nzSpaceItem>IP 地址： {{ item.ip }}</span>
+              <span *nzSpaceItem>国家 / 地区：{{ !!item.detail.country ? item.detail.country : '-' }}</span>
+              <span *nzSpaceItem>省 / 州：{{ !!item.detail.province ? item.detail.province : '-' }}</span>
+              <span *nzSpaceItem>城市：{{ !!item.detail.city ? item.detail.city : '-' }}</span>
+              <span *nzSpaceItem>ISP：{{ !!item.detail.isp ? item.detail.isp : '-' }}</span>
+            </nz-space>
+          </td>
+        </tr>
+        <tr [nzExpand]="expands.has(item._id)">
           <nz-space [nzSplit]="split">
             <ng-template #split>
               <nz-divider nzType="vertical"></nz-divider>
             </ng-template>
-            <span *nzSpaceItem>{{ item.username }}</span>
-            <span *nzSpaceItem>{{ !!item.email ? item.email : '-' }}</span>
-          </nz-space>
-        </td>
-        <td>
-          <nz-space [nzSplit]="split">
-            <ng-template #split>
-              <nz-divider nzType="vertical"></nz-divider>
-            </ng-template>
+            <span *nzSpaceItem>UID： {{ item.user }}</span>
             <span *nzSpaceItem>TokenID： {{ item.token_id }}</span>
-            <span *nzSpaceItem>IP： {{ item.ip }}</span>
-            <span *nzSpaceItem>{{ !!item.detail.country ? item.detail.country : '-' }}</span>
-            <span *nzSpaceItem>{{ !!item.detail.province ? item.detail.province : '-' }}</span>
-            <span *nzSpaceItem>{{ !!item.detail.city ? item.detail.city : '-' }}</span>
-            <span *nzSpaceItem>{{ !!item.detail.isp ? item.detail.isp : '-' }}</span>
           </nz-space>
-        </td>
-      </tr>
+        </tr>
+      </ng-container>
     </tbody>
   </nz-table>
 </nz-card>
