--- a/projects/settings/src/settings.component.html
+++ b/projects/settings/src/settings.component.html
@@ -5,7 +5,7 @@
       <ul nz-menu nzMode="inline">
         <li nz-menu-group nzTitle="应用">
           <ul>
-            <li nz-menu-item nzMatchRouter [routerLink]="['application', 'pages']">
+            <li nz-menu-item nzMatchRouter [routerLink]="['application', 'factory']">
               <i nz-icon nzType="layout"></i> <span>内容生成器</span>
             </li>
           </ul>
