简化：媒体资源合并至@weplanx/integrate

--- a/projects/integrate/admin/admin.component.html
+++ b/projects/integrate/admin/admin.component.html
@@ -8,6 +8,12 @@
             <li nz-menu-item nzMatchRouter [routerLink]="['application', 'factory']">
               <i nz-icon nzType="layout"></i> <span>内容生成器</span>
             </li>
+            <li nz-menu-item nzMatchRouter [routerLink]="['application', 'pictures']">
+              <i nz-icon nzType="picture"></i><span>图库</span>
+            </li>
+            <li nz-menu-item nzMatchRouter [routerLink]="['application', 'videos']">
+              <i nz-icon nzType="play-circle"></i><span>视频</span>
+            </li>
           </ul>
         </li>
         <li nz-menu-group nzTitle="组织">
