--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -36,7 +36,7 @@
             <a nz-button nzSize="small" nzType="link">忘记密码？</a>
           </nz-col>
           <nz-col [nzSpan]="24">
-            <button nz-button nzBlock nzType="primary"> 登 录 </button>
+            <button nz-button nzBlock nzType="primary" [nzLoading]="loading"> 登 录 </button>
           </nz-col>
           <nz-col [nzSpan]="24">
             <nz-space>
