--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -40,7 +40,7 @@
           </nz-col>
           <nz-col [nzSpan]="24">
             <nz-space>
-              <a *nzSpaceItem nz-tooltip="飞书">
+              <a *nzSpaceItem nz-tooltip="飞书" [href]="feishu">
                 <nz-avatar nzSize="small" nzShape="square" [nzSrc]="['assets', 'feishu.png'] | wpxAssets"></nz-avatar>
               </a>
               <!--              <a *nzSpaceItem nz-tooltip="企业微信">-->
